# omnilibrarian-ai-course-project

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/: __init__.py
configs/: pipelines.yaml  tenants.yaml
docs/: BLUE_PRINCE_EVAL_REPORT.md  FINAL_SUBMISSION.md  MCP_ARCHITECTURE.md  README.md  SCREENSHOT_SUBMISSION_CHECKLIST.md
scripts/: build_entities.py  clear_cache.py  eval.py  eval_answers.py  eval_retrieval.py  eval_tool_routing.py  index_chunks.py  ingest.py  omni.py  run_blue_prince_pipeline.py  run_dev.py  smoke_chat.py  smoke_retrieval.py
tests/: test_answer_eval.py  test_answer_generator.py  test_bg3_mcp_client.py  test_bg3_mcp_tools.py  test_bg3_wiki_fetcher.py  test_bg3_wiki_manifest.py  test_bg3_wiki_normalizer.py  test_blue_prince_mcp_client.py  test_blue_prince_mcp_tools.py  test_blue_prince_pipeline.py  test_blue_prince_reddit_ingestion.py  test_blue_prince_sources.py  test_blue_prince_wiki_fetcher.py  test_blue_prince_wiki_normalizer.py  test_bm25_retriever.py  test_cache_maintenance.py  test_chat_api.py  test_chat_service.py  test_chunking.py  test_entity_registry.py  test_game_detection.py  test_health_api.py  test_index_chunks_cli.py  test_ingestion_cache.py  test_knowledge_factory.py  test_knowledge_service.py  test_langgraph_workflow.py  test_llm_cache.py  test_llm_providers.py  test_mcp_client_registry.py  test_omni_cli.py  test_query_rewriting.py  test_rate_limiter.py  test_readiness.py  test_reranking.py  test_retrieval_eval.py  test_run_dev.py  test_safety_guard.py  test_session_store.py  test_smoke_chat.py  (+6 more)
(+112 files in other folders)
