[project]
name = "omnilibrarian"
version = "0.1.0"
description = "Multi-tenant AI gateway with RAG, LangGraph, and MCP for game knowledge bases."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "qdrant-client>=1.10",
    "redis>=5.0",
    "rapidfuzz>=3.9",
    "sentence-transformers>=3.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "openai>=1.40",
    "mcp>=1.0",
    "anyio>=4.0",
    "streamlit>=1.37",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx2>=0.28",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
